Attempting to clean up files

--- a/DentalMedical/DentalMedical.csproj
+++ b/DentalMedical/DentalMedical.csproj
@@ -65,6 +65,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="ExcelToMySQL.cs" />
     <Compile Include="IO.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
