--- a/DentalMedical/DentalMedical.csproj
+++ b/DentalMedical/DentalMedical.csproj
@@ -34,6 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DocumentFormat.OpenXml, Version=2.5.5631.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="ExcelDataReader, Version=3.4.0.0, Culture=neutral, PublicKeyToken=93517dbe6a4012fa, processorArchitecture=MSIL">
       <HintPath>..\packages\ExcelDataReader.3.4.0\lib\net45\ExcelDataReader.dll</HintPath>
     </Reference>
@@ -87,6 +88,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="DBConnection.cs" />
+    <Compile Include="ExcelCampaign.cs" />
     <Compile Include="ExcelToMySQL.cs" />
     <Compile Include="IO.cs" />
     <Compile Include="MainWindow.xaml.cs">
@@ -95,6 +97,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OLEDBConnection.cs" />
+    <Compile Include="OpenXMLSDK.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
