--- a/DentalMedical/DentalMedical.csproj
+++ b/DentalMedical/DentalMedical.csproj
@@ -50,6 +50,9 @@
     <Reference Include="MySql.Data, Version=8.0.11.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>..\packages\MySql.Data.8.0.11\lib\net452\MySql.Data.dll</HintPath>
     </Reference>
+    <Reference Include="office, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -89,6 +92,7 @@
     </Compile>
     <Compile Include="DBConnection.cs" />
     <Compile Include="ExcelCampaign.cs" />
+    <Compile Include="ExcelHandler.cs" />
     <Compile Include="ExcelToMySQL.cs" />
     <Compile Include="IO.cs" />
     <Compile Include="MainWindow.xaml.cs">
