--- a/DentalMedical/DentalMedical.csproj
+++ b/DentalMedical/DentalMedical.csproj
@@ -90,6 +90,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="CSVToMySQL.cs" />
     <Compile Include="DBConnection.cs" />
     <Compile Include="ExcelCampaign.cs" />
     <Compile Include="ExcelHandler.cs" />
