switching to another branch

--- a/DentalMedical/DentalMedical.csproj
+++ b/DentalMedical/DentalMedical.csproj
@@ -82,8 +82,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="CallBackProof.xaml.cs">
+      <DependentUpon>CallBackProof.xaml</DependentUpon>
+    </Compile>
     <Compile Include="PIMACampaign.cs" />
     <Compile Include="ReadExcelData.cs" />
+    <Page Include="CallBackProof.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
